fix: limit py threads and add fees for prediction markets